---
source: book/tests/snapshot.rs
expression: "from employees\nfilter country == \"USA\"                       # Each line transforms the previous result.\nderive [                                     # This adds columns / variables.\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost  # Variables can use other variables.\n]\nfilter gross_cost > 0\ngroup [title, country] (                     # For each group use a nested pipeline\n  aggregate [                                # Aggregate each group to a single row\n    average salary,\n    average gross_salary,\n    sum salary,\n    sum gross_salary,\n    average gross_cost,\n    sum_gross_cost = sum gross_cost,\n    ct = count,\n  ]\n)\nsort sum_gross_cost\nfilter ct > 200\ntake 20\n"
---
from employees
filter country == "USA"
derive [
  gross_salary = salary + payroll_tax,
  gross_cost = gross_salary + benefits_cost,
]
filter gross_cost > 0
group [
  title,
  country,
] (
  aggregate [
  average salary,
  average gross_salary,
  sum salary,
  sum gross_salary,
  average gross_cost,
  sum_gross_cost = sum gross_cost,
  ct = count,
]
)
sort sum_gross_cost
filter ct > 200
take 20



